--- a/app/styles/quintile-bin.scss
+++ b/app/styles/quintile-bin.scss
@@ -8,6 +8,7 @@ $quintileBinColor: $pale;
 
 .quintile-bin {
   width: 19%;
+  border-radius: 3px;
   display: inline-block;
   background-color: $quintileBinColor;
   min-height: 400px;
